[project]
name = "pyproxy"
authors = [
    { name = "Bruno Kraychete da Costa", email = "brunokc@kraychete.com" },
]
description = "A simple programmatic HTTP proxy"
classifiers = [
    "Programming Language :: Python :: 3",
]
dynamic = ["version", "readme"]

[tool.setuptools.dynamic]
version = { attr = "pyproxy.__version__" }
readme = { file = ["README.md"] }

#[tool.setuptools.packages.find]
#where = ["pyproxy"]
#where = ["src"]  # list of folders that contain the packages (["."] by default)
#include = ["my_package*"]  # package names should match these glob patterns (["*"] by default)
#include = ["pyproxy"]
#exclude = ["my_package.tests*"]  # exclude packages matching these glob patterns (empty by default)
#namespaces = false  # to disable scanning PEP 420 namespaces (true by default)

[tool.setuptools.package-data]
pyproxy = ["py.typed"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
log_cli = true
log_level = "DEBUG"
#testpaths = [
#    "tests",
#]
#addopts = [
#    "--import-mode=importlib",
#]

[tool.isort]
# https://github.com/PyCQA/isort/wiki/isort-Settings
profile = "black"
src_paths = ["pyproxy", "tests"]
# will group `import x` and `from x import` of the same module.
force_sort_within_sections = true
skip_gitignore = true
known_first_party = [
    "pyproxy",
    "tests",
]
#forced_separate = [
#    "tests",
#]
combine_as_imports = true
skip = [".gitignore", ".dockerignore"]
