[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pyproxy"
authors = [
    { name = "Bruno Kraychete da Costa", email = "brunokc@kraychete.com" },
]
description = "A simple programmatic HTTP proxy"
classifiers = [
    "Programming Language :: Python :: 3",
]
dynamic = ["version", "readme", "dependencies"]

[tool.setuptools.dynamic]
version = { attr = "pyproxy.__version__" }
readme = { file = ["README.md"] }
dependencies = { file = ["src/requirements.txt"] }

[tool.setuptools.package-data]
pyproxy = ["py.typed"]

[tool.pytest.ini_options]
log_cli = true
log_level = "DEBUG"
asyncio_mode = "auto"
#testpaths = [
#    "tests",
#]
#addopts = [
#    "--import-mode=importlib",
#]

[tool.isort]
# https://github.com/PyCQA/isort/wiki/isort-Settings
profile = "black"
src_paths = ["pyproxy", "tests"]
# will group `import x` and `from x import` of the same module.
force_sort_within_sections = true
skip_gitignore = true
known_first_party = [
    "pyproxy",
    "tests",
]
#forced_separate = [
#    "tests",
#]
combine_as_imports = true
skip = [".gitignore", ".dockerignore"]
